APIドキュメント AUTH部分修正
