# src/store/app/Http/Controllers/AuthController.php
@@ -4,22 +4,33 @@ namespace App\Http\Controllers;
 
 use Illuminate\Http\Request;
 use Illuminate\Http\Response;
-use Illuminate\Http\JsonResponse;
+use App\Http\Controllers\Controller;
 use Illuminate\Support\Facades\Auth;
 use Illuminate\Support\Facades\Hash;
 use Illuminate\Support\Facades\Validator;
-use Illuminate\Validation\ValidationException;
-use App\Http\Controllers\Controller;
+use App\Traits\ResponseTrait;
 use App\Models\User;
+use App\Http\Resources\UserResource;
 
 class AuthController extends Controller
 {
+    use ResponseTrait;
 
     /**
-     * ユーザ登録
+     * POST ユーザー登録
      *
-     * @param \Illuminate\Http\Request $request
-     * @return \Illuminate\Http\JsonResponse
+     * @group Auth
+     * @bodyParam name string required 名前 Example: 山田花子
+     * @bodyParam email string required メールアドレス Example: user1@example.com
+     * @bodyParam password string required パスワード Example: password
+     * @response 200 {
+     *     "message": "User registration completed",
+     *     "data": {
+     *         "id": 15,
+     *         "name": "山田花子",
+     *         "email": "user1@example.com"
+     *     }
+     * }
      */
     public function register(Request $request): \Illuminate\Http\JsonResponse
     {
@@ -48,16 +59,29 @@ class AuthController extends Controller
             'password' => Hash::make($request->password),
         ]);
 
-        return response()->json([
-            'message' => 'User registration completed',
-        ], Response::HTTP_OK);
+        return $this->getResponse(
+            [
+                'id' => $user->id,
+                'name' =>  $user->name,
+                'email' => $user->email,
+            ],
+            'User registration completed'
+        );
     }
 
     /**
-     * ログイン
+     * POST ログイン
      *
-     * @param \Illuminate\Http\Request $request
-     * @return \Illuminate\Http\JsonResponse
+     * @group Auth
+     * @bodyParam email string required メールアドレス Example: user1@example.com
+     * @bodyParam password string required パスワード Example: password
+     * @response 200 {
+     *     "message": "Success",
+     *     "data": {
+     *         "access_token": "xxxxxxxxxxxxxxxxxxxx",
+     *         "token_type": "Bearer",
+     *     }
+     * }
      */
     public function login(Request $request): \Illuminate\Http\JsonResponse
     {
@@ -66,20 +90,19 @@ class AuthController extends Controller
             'password' => 'required'
         ]);
 
-        if (Auth::attempt($credentials)) {
-            $user = User::whereEmail($request->email)->first();
-
-            $user->tokens()->delete();
-            $token = $user->createToken("login:user{$user->id}")->plainTextToken;
-
-            return response()->json([
-                'access_token' => $token,
-                'token_type' => 'Bearer',
-            ], Response::HTTP_OK);
+        if (!Auth::attempt($credentials)) {
+            return $this->getErrorResponse('User Not Found.');
         }
 
-        return response()->json([
-            'message' => 'User Not Found.'
-        ], Response::HTTP_INTERNAL_SERVER_ERROR);
+        $user = User::whereEmail($request->email)->first();
+        $user->tokens()->delete();
+        $token = $user->createToken("login:user{$user->id}")->plainTextToken;
+
+        return $this->getResponse(
+            [
+                'access_token' => $token,
+                'token_type' => 'Bearer'
+            ],
+        );
     }
 }
